# quizulon

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  data.json  main.py  pyproject.toml  setup.cfg  setup.py  test.html  tox.ini
.github/: ISSUE_TEMPLATE.md
db/: schema.sql
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: package-lock.json  package.json
frontend/src/: ambient.d.ts
frontend/src/lib/: absolute.ts
frontend/src/routes/: +page.svelte  Timer.svelte
frontend/src/routes/learner/: +page.svelte
frontend/src/routes/proctor/: +page.svelte  DisplayQuestion.svelte
quizulon/: __init__.py  cli.py
tests/: test_quizulon.py
