[project]
name = "quizulon"
version = "0.1.0"
description = "A quiz app for multiple participants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.0.2",
    "mypy>=1.15.0",
    "ruff>=0.9.10",
]
